// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getBorderStyles Ensures 0 is accepted on responsive stages 1`] = `
{
  "general": {
    "border-bottom-radius": "2px",
    "border-bottom-width": "2px",
    "border-color": "rgba(var(--maxi-light-color-7,8,18,25),1)",
    "border-left-radius": "2px",
    "border-left-width": "2px",
    "border-right-radius": "2px",
    "border-right-width": "2px",
    "border-style": "solid",
    "border-top-radius": "2px",
    "border-top-width": "2px",
  },
  "l": {},
  "m": {},
  "s": {
    "border-right-radius": "0px",
    "border-right-width": "0px",
  },
  "xl": {},
  "xs": {},
  "xxl": {},
}
`;

exports[`getBorderStyles Return a border styles object based on Button Maxi 1`] = `
{
  "general": {
    "border-bottom-left-radius": "100px",
    "border-bottom-right-radius": "100px",
    "border-bottom-width": "20px",
    "border-color": "rgba(197,26,209,0.46)",
    "border-left-width": "90px",
    "border-right-width": "90px",
    "border-style": "solid",
    "border-top-left-radius": "100px",
    "border-top-right-radius": "100px",
    "border-top-width": "20px",
  },
  "l": {
    "border-bottom-width": "2px",
    "border-color": "rgba(114,52,118,0.46)",
    "border-left-width": "2px",
    "border-right-width": "2px",
    "border-style": "dashed",
    "border-top-width": "2px",
  },
  "m": {
    "border-bottom-width": "50px",
    "border-color": "var(--maxi-light-button-border-color,rgba(var(--maxi-light-color-7,8,18,25),0.46))",
    "border-left-width": "50px",
    "border-right-width": "50px",
    "border-top-width": "50px",
  },
  "s": {
    "border-bottom-width": "5px",
    "border-left-width": "5px",
    "border-right-width": "5px",
    "border-top-width": "5px",
  },
  "xl": {
    "border-bottom-left-radius": "100px",
    "border-bottom-right-radius": "100px",
    "border-color": "rgba(197,26,209,0.46)",
    "border-left-width": "90px",
    "border-right-width": "90px",
    "border-top-left-radius": "100px",
    "border-top-right-radius": "100px",
  },
  "xs": {
    "border-bottom-left-radius": "0px",
    "border-bottom-right-radius": "0px",
    "border-color": "var(--maxi-light-button-border-color,rgba(var(--maxi-light-color-2,242,249,253),0.46))",
    "border-top-left-radius": "0px",
    "border-top-right-radius": "0px",
  },
  "xxl": {
    "border-color": "var(--maxi-light-button-border-color,rgba(var(--maxi-light-color-3,155,155,155),0.46))",
    "border-left-width": "0px",
    "border-right-width": "0px",
  },
}
`;

exports[`getBorderStyles Return a border styles object based on Button Maxi with hover active and non global SC settings enabled 1`] = `
{
  "general": {
    "border-bottom-left-radius": "10px",
    "border-bottom-right-radius": "10px",
    "border-bottom-width": "20px",
    "border-color": "var(--maxi-light-button-border-color,rgba(var(--maxi-light-color-2,242,249,253),1))",
    "border-left-width": "20px",
    "border-right-width": "20px",
    "border-style": "solid",
    "border-top-left-radius": "10px",
    "border-top-right-radius": "10px",
    "border-top-width": "20px",
  },
  "l": {},
  "m": {},
  "s": {},
  "xl": {},
  "xs": {},
  "xxl": {},
}
`;

exports[`getBorderStyles Return a border styles object based on Button Maxi with hover disabled and global SC settings enabled 1`] = `
{
  "general": {
    "border-bottom-left-radius": "10px",
    "border-bottom-right-radius": "10px",
    "border-bottom-width": "20px",
    "border-color": "var(--maxi-light-button-border-color,rgba(var(--maxi-light-color-2,242,249,253),1))",
    "border-left-width": "20px",
    "border-right-width": "20px",
    "border-style": "solid",
    "border-top-left-radius": "10px",
    "border-top-right-radius": "10px",
    "border-top-width": "20px",
  },
  "l": {},
  "m": {},
  "s": {},
  "xl": {},
  "xs": {},
  "xxl": {},
}
`;

exports[`getBorderStyles Return a border styles object with hover options 1`] = `
{
  "general": {
    "border-bottom-left-radius": "50px",
    "border-bottom-right-radius": "50px",
    "border-bottom-width": "30px",
    "border-color": "rgba(var(--maxi-light-color-6,201,52,10),0.31)",
    "border-left-width": "1px",
    "border-right-width": "20px",
    "border-style": "dashed",
    "border-top-left-radius": "50px",
    "border-top-right-radius": "50px",
    "border-top-width": "1px",
  },
  "l": {
    "border-bottom-width": "0px",
    "border-color": "rgba(23, 63, 194, 0.38)",
    "border-left-width": "30px",
    "border-right-width": "0px",
    "border-top-width": "20px",
  },
  "m": {
    "border-bottom-width": "0px",
    "border-left-width": "0px",
    "border-right-width": "0px",
    "border-top-width": "0px",
  },
  "s": {
    "border-color": "rgba(51,54,62,0.38)",
  },
  "xl": {
    "border-bottom-left-radius": "50px",
    "border-bottom-right-radius": "50px",
    "border-bottom-width": "30px",
    "border-left-width": "1px",
    "border-top-left-radius": "50px",
    "border-top-right-radius": "50px",
    "border-top-width": "1px",
  },
  "xs": {
    "border-bottom-width": "3px",
    "border-color": "rgba(var(--maxi-light-color-5,0,0,0),0.94)",
    "border-left-width": "4px",
    "border-right-width": "2px",
    "border-top-width": "1px",
  },
  "xxl": {
    "border-color": "rgba(213,14,227,0.31)",
    "border-left-width": "6px",
    "border-right-width": "6px",
  },
}
`;

exports[`getBorderStyles Return an IB border styles when border-style - none 1`] = `
{
  "general": {
    "border": "none",
  },
  "l": {},
  "m": {},
  "s": {},
  "xl": {},
  "xs": {},
  "xxl": {},
}
`;

exports[`getBorderStyles Return border styles object with all the settings 1`] = `
{
  "general": {
    "border-bottom-width": "3px",
    "border-color": "rgba(var(--maxi-light-color-2,242,249,253),1)",
    "border-left-width": "1px",
    "border-right-width": "2px",
    "border-style": "solid",
    "border-top-width": "1px",
  },
  "l": {
    "border-bottom-width": "0px",
    "border-color": "rgba(23, 63, 194, 0.38)",
    "border-left-width": "30px",
    "border-right-width": "0px",
    "border-top-width": "20px",
  },
  "m": {},
  "s": {
    "border-color": "rgba(51,54,62,0.38)",
  },
  "xl": {
    "border-bottom-left-radius": "50px",
    "border-bottom-right-radius": "50px",
    "border-bottom-width": "3px",
    "border-left-width": "1px",
    "border-top-left-radius": "50px",
    "border-top-right-radius": "50px",
    "border-top-width": "1px",
  },
  "xs": {
    "border-color": "rgba(var(--maxi-light-color-5,0,0,0),0.94)",
  },
  "xxl": {
    "border-color": "rgba(var(--maxi-light-color-5,0,0,0),1)",
    "border-left-width": "6px",
    "border-right-width": "6px",
  },
}
`;

exports[`getBorderStyles Test simple and default border attributes 1`] = `
{
  "general": {},
  "l": {},
  "m": {},
  "s": {},
  "xl": {},
  "xs": {},
  "xxl": {},
}
`;
